[RED] Refactor tests for the new promos implementation